--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&family=Roboto:wght@400;900&family=Ubuntu:ital,wght@0,300;0,400;1,300&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
 
-header{
+header {
     background-image: url('img/bg7.jpg');
     background-position: center center;
     background-size: 100vh no-repeat;
@@ -18,16 +18,12 @@ header{
     padding: 10px 10px;
 }
 
-.bgH{
-
-}
-
-h1{
+h1 {
     color: white;
-    
 }
 
-select, .containerEps{
+select,
+.containerEps {
     display: flex;
     padding: 5px;
     margin-top: 15px;
@@ -36,7 +32,7 @@ select, .containerEps{
     border-radius: 5px;
 }
 
-button{
+button {
     padding: 5px;
     margin-top: 5px;
     width: 215px;
@@ -49,11 +45,11 @@ button{
     color: white;
 }
 
-button:hover{
-    transform: scale(1.02);
+button:hover {
+    transform: scale(1.03);
 }
 
-.containerEps{
+.containerEps {
     display: none;
     width: 215px;
     flex-direction: column;
@@ -62,9 +58,43 @@ button:hover{
     height: 82.5vh;
     background-color: #f1eee9b6;
     border-radius: 5px;
+    transition: 1s;
+    animation: bounce 1s ;
+    -webkit-animation: bounce 1s;
 }
 
-p{
+.containerEps2 {
+    display: none;
+    width: 215px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    height: 82.5vh;
+    background-color: #f1eee9b6;
+    border-radius: 5px;
+    transition: 1s;
+    animation: bounce 1s ;
+    -webkit-animation: bounce 1s;
+}
+
+@keyframes bounce {
+    from {
+        transform: translate(-150px);
+    }
+
+    to {
+        transform: translate(0px);
+    }
+}
+
+@keyframes mymove {
+    0%   {top: -1000px;}
+    25%  {top: 146px;}
+    
+}
+
+p {
     padding-top: 10px;
     color: black;
     text-decoration: none;
@@ -73,15 +103,17 @@ p{
     cursor: pointer;
 }
 
-p:hover{
+p:hover {
     transform: scale(1.1);
 }
 
-.movie{
+.movie {
     display: none;
-    position:absolute;
+    position: absolute;
     left: 27%;
     top: 15%;
     width: 1000px;
     border-radius: 5px;
+    animation: mymove 4s ;
+    -webkit-animation: mymove 4s;
 }
