--- a/style.css
+++ b/style.css
@@ -138,6 +138,10 @@ p:hover {
     -webkit-animation: mymove 2s;
 }
 
+.closeButton{
+    display: none;
+}
+
 @media only screen and (max-width: 845px) {
     
     h1{
@@ -156,16 +160,25 @@ p:hover {
         width: 90vw;
         /* padding-left: 20px;
         padding-top: 20px; */
-        top: 5vh;
+        top: 17vh;
         left: 5%;
         right: 1%;
         
     }
+    .containerEps{
+        height: 520px;
+    }
+
     .containerEps2{
         height: 630px;
         align-items: center;
         justify-content: center;
     }
+
+    .containerEps3{
+        height: 660px;
+    }
+
     .containerEps2 p{
         padding-top: 7px;
         align-items: center;
@@ -182,4 +195,20 @@ p:hover {
         justify-content: center;
         align-items: center;
     }
+    .closeButton{
+        display: none;
+        z-index: 100;
+        border-radius: 50%;
+        position: relative;
+        float: right;
+        right: 3%;
+        top: 20%;
+        cursor: pointer;
+    }
+    .containerClose{
+        float: inline-start;
+        width: 100%;
+        height: 30px;
+    }
+    
 }
