--- a/style.css
+++ b/style.css
@@ -140,9 +140,17 @@ p:hover {
 
 .closeButton{
     display: none;
+    cursor: pointer;
 }
 
-@media only screen and (max-width: 845px) {
+.containerClose{
+    width: 100%;
+    float: right;
+}
+
+
+
+@media only screen and (max-width: 1920px) {
     
     h1{
         color: white;
