--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 header {
-    
+    max-width: 100vw;
 }
 
 body {
@@ -64,7 +64,8 @@ button:hover {
     align-items: center;
     justify-content: center;
     height: 82.5vh;
-    background-color: #f1eee9b6;
+    margin-bottom: 20px;
+    background-color: #f1eee9ea;
     box-shadow: 0 15px 25px rgba(0,0,0,.9);
     border-radius: 5px;
     animation: bounce .5s ;
@@ -79,7 +80,8 @@ button:hover {
     justify-content: center;
     margin-top: 15px;
     height: 82.5vh;
-    background-color: #f1eee9b6;
+    margin-bottom: 20px;
+    background-color: #f1eee9ea;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
     border-radius: 5px;
     animation: bounce .5s ;
@@ -94,7 +96,24 @@ button:hover {
     justify-content: center;
     margin-top: 15px;
     height: 82.5vh;
-    background-color: #f1eee9b6;
+    margin-bottom: 20px;
+    background-color: #f1eee9ea;
+    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    border-radius: 5px;
+    animation: bounce .5s ;
+    -webkit-animation: bounce .5s;
+}
+
+.containerEps4 {
+    display: none;
+    width: 215px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    height: 78.5vh;
+    margin-bottom: 20px;
+    background-color: #f1eee9ea;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
     border-radius: 5px;
     animation: bounce .5s ;
@@ -150,8 +169,6 @@ p:hover {
     width: 100%;
     float: right;
 }
-
-
 
 @media only screen and (max-width: 1920px) {
     
