--- a/style.css
+++ b/style.css
@@ -357,4 +357,30 @@ p:hover {
         top: 20%;
         cursor: pointer;
     }
+    .containerEps4{
+        height: 85vh;
+    }
+}
+
+@media only screen and (max-width: 380px) {
+    .movie{
+        display: none;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        left: 0px;         
+    }
+    .closeButton{
+        display: none;
+        z-index: 100;
+        border-radius: 50%;
+        position: relative;
+        float: right;
+        right: 1px;
+        top: 20%;
+        cursor: pointer;
+    }
+    .containerEps4{
+        height: 105vh;
+    }
 }
