--- a/style.css
+++ b/style.css
@@ -7,12 +7,16 @@
     font-family: 'Saira', sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+
 header {
     max-width: 100vw;
 }
 
 body {
-    background-image: url('img/gwujWb7.jpg');
+    background-image: url(img/281920\ \(1\).jpg);
     background-size: cover;
     background-repeat: repeat;
     background-position: center center;
@@ -35,7 +39,7 @@ select, .containerEps {
     width: 215px;
     height: 30px;
     border-radius: 5px;
-    
+    outline: none;
 }
 
 button {
@@ -140,6 +144,118 @@ button:hover {
     -webkit-animation: bounce .5s;
 }
 
+.containerEps6 {
+    display: none;
+    width: 215px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    height: 85.5vh;
+    margin-bottom: 20px;
+    background-color: #f1eee9ea;
+    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    border-radius: 5px;
+    animation: bounce .5s ;
+    -webkit-animation: bounce .5s;
+}
+
+.containerEps7 {
+    display: none;
+    width: 215px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    height: 85.5vh;
+    margin-bottom: 20px;
+    background-color: #f1eee9ea;
+    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    border-radius: 5px;
+    animation: bounce .5s ;
+    -webkit-animation: bounce .5s;
+}
+
+.containerEps8 {
+    display: none;
+    width: 215px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    height: 85.5vh;
+    margin-bottom: 20px;
+    background-color: #f1eee9ea;
+    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    border-radius: 5px;
+    animation: bounce .5s ;
+    -webkit-animation: bounce .5s;
+}
+
+.containerEps9 {
+    display: none;
+    width: 215px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    height: 85.5vh;
+    margin-bottom: 20px;
+    background-color: #f1eee9ea;
+    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    border-radius: 5px;
+    animation: bounce .5s ;
+    -webkit-animation: bounce .5s;
+}
+
+.containerEps10 {
+    display: none;
+    width: 215px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    height: 85.5vh;
+    margin-bottom: 20px;
+    background-color: #f1eee9ea;
+    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    border-radius: 5px;
+    animation: bounce .5s ;
+    -webkit-animation: bounce .5s;
+}
+
+.containerEps11 {
+    display: none;
+    width: 215px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    height: 85.5vh;
+    margin-bottom: 20px;
+    background-color: #f1eee9ea;
+    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    border-radius: 5px;
+    animation: bounce .5s ;
+    -webkit-animation: bounce .5s;
+}
+
+.containerEps12 {
+    display: none;
+    width: 215px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    height: 85.5vh;
+    margin-bottom: 20px;
+    background-color: #f1eee9ea;
+    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    border-radius: 5px;
+    animation: bounce .5s ;
+    -webkit-animation: bounce .5s;
+}
+
 @keyframes bounce {
     from {
         transform: translate(-150px);
@@ -152,7 +268,7 @@ button:hover {
 
 @keyframes mymove {
     0%   {top: -1000px;}
-    25%  {top: 142px;}
+    100%  {top: 155px;}
     
 }
 
@@ -175,9 +291,9 @@ p:hover {
     left: 27%;
     top: 15%;
     width: 55vw;
-    border-radius: 5px;
-    animation: mymove 2s ;
-    -webkit-animation: mymove 2s;
+    border-radius: 1px;
+    animation: mymove 0.9s ;
+    -webkit-animation: mymove 0.9s;
 }
 
 .closeButton{
@@ -190,25 +306,7 @@ p:hover {
     float: right;
 }
 
-@media only screen and (max-width: 920px) {
-    .movie{
-        display: block;
-        justify-content: center;
-        align-items: center;
-        width: 100vw;
-        left: 0px;         
-    }
-    .closeButton{
-        display: none;
-        z-index: 100;
-        border-radius: 50%;
-        position: relative;
-        float: right;
-        right: 1px;
-        top: 20%;
-        cursor: pointer;
-    }
-}
+
 
 @media only screen and (max-width: 1920px) {
     
@@ -228,7 +326,7 @@ p:hover {
         width: 65vw;
         /* padding-left: 20px;
         padding-top: 20px; */
-        top: 17vh;
+        top: 16vh;
         left: 17.8%;        
     }
     .containerEps{
@@ -255,6 +353,28 @@ p:hover {
         height: 730px;
     }
     .containerEps5{
+        height: 730px;
+    }
+    .containerEps6{
+        height: 730px;
+    }
+
+    .containerEps7{
+        height: 730px;
+    }
+    .containerEps8{
+        height: 730px;
+    }
+    .containerEps9{
+        height: 730px;
+    }
+    .containerEps10{
+        height: 730px;
+    }
+    .containerEps11{
+        height: 730px;
+    }
+    .containerEps12{
         height: 730px;
     }
 
@@ -285,6 +405,112 @@ p:hover {
         height: 30px;
     }
     
+}
+
+@media only screen and (max-width: 1280px) {
+    
+    body{
+        background-size: cover;
+    }
+    
+    .movie{
+        display: none;
+        justify-content: center;
+        align-items: center;
+        width: 65vw;
+        left: 17.8%;
+        top: 20%;        
+    }
+    .closeButton{
+        display: none;
+        z-index: 100;
+        border-radius: 50%;
+        position: relative;
+        float: right;
+        right: 195px;
+        top: 25%;
+        cursor: pointer;
+    }
+    .containerEps4{
+        height: 730px;
+    }
+    .containerEps5{
+        height: 730px;
+    }
+    .containerEps6{
+        height: 730px;
+    }
+    .containerEps7{
+        height: 730px;
+    }
+    .containerEps8{
+        height: 730px;
+    }
+    .containerEps9{
+        height: 730px;
+    }
+    .containerEps10{
+        height: 730px;
+    }
+    .containerEps11{
+        height: 730px;
+    }
+    .containerEps12{
+        height: 730px;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    
+    body{
+        background-size: cover;
+    }
+    
+    .movie{
+        display: none;
+        justify-content: center;
+        align-items: center;
+        width: 65vw;
+        left: 17.8%;
+        top: 25%;        
+    }
+    .closeButton{
+        display: none;
+        z-index: 100;
+        border-radius: 50%;
+        position: relative;
+        float: right;
+        right: 155px;
+        top: 15%;
+        cursor: pointer;
+    }
+    .containerEps4{
+        height: 730px;
+    }
+    .containerEps5{
+        height: 730px;
+    }
+    .containerEps6{
+        height: 730px;
+    }
+    .containerEps7{
+        height: 730px;
+    }
+    .containerEps8{
+        height: 730px;
+    }
+    .containerEps9{
+        height: 730px;
+    }
+    .containerEps10{
+        height: 730px;
+    }
+    .containerEps11{
+        height: 730px;
+    }
+    .containerEps12{
+        height: 730px;
+    }
 }
 
 @media only screen and (max-width: 920px) {
@@ -318,6 +544,398 @@ p:hover {
     .containerEps5{
         height: 730px;
     }
+    .containerEps6{
+        height: 730px;
+    }
+    .containerEps7{
+        height: 730px;
+    }
+    .containerEps8{
+        height: 730px;
+    }
+    .containerEps9{
+        height: 730px;
+    }
+    .containerEps10{
+        height: 730px;
+    }
+    .containerEps11{
+        height: 730px;
+    }
+    .containerEps12{
+        height: 730px;
+    }
+}
+
+@media only screen and (max-width: 912px) {
+    
+    body{
+        background-size: cover;
+    }
+    
+    .movie{
+        display: none;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        left: 0px;
+        top: 11%;        
+    }
+    .closeButton{
+        display: none;
+        z-index: 100;
+        border-radius: 50%;
+        position: relative;
+        float: right;
+        right: 1px;
+        top: 20%;
+        cursor: pointer;
+    }
+    .containerEps4{
+        height: 730px;
+    }
+    .containerEps5{
+        height: 730px;
+    }
+    .containerEps6{
+        height: 730px;
+    }
+    .containerEps7{
+        height: 730px;
+    }
+    .containerEps8{
+        height: 730px;
+    }
+    .containerEps9{
+        height: 730px;
+    }
+    .containerEps10{
+        height: 730px;
+    }
+    .containerEps11{
+        height: 730px;
+    }
+    .containerEps12{
+        height: 730px;
+    }
+}
+
+@media only screen and (max-width: 820px) {
+    
+    body{
+        background-size: cover;
+    }
+    
+    .movie{
+        display: none;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        left: 0px;
+        top: 13%;        
+    }
+    .closeButton{
+        display: none;
+        z-index: 100;
+        border-radius: 50%;
+        position: relative;
+        float: right;
+        right: 1px;
+        top: 20%;
+        cursor: pointer;
+    }
+    .containerEps4{
+        height: 730px;
+    }
+    .containerEps5{
+        height: 730px;
+    }
+    .containerEps6{
+        height: 730px;
+    }
+    .containerEps7{
+        height: 730px;
+    }
+    .containerEps8{
+        height: 730px;
+    }
+    .containerEps9{
+        height: 730px;
+    }
+    .containerEps10{
+        height: 730px;
+    }
+    .containerEps11{
+        height: 730px;
+    }
+    .containerEps12{
+        height: 730px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    
+    body{
+        background-size: cover;
+    }
+    
+    .movie{
+        display: none;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        left: 0%;
+        top: 14%;        
+    }
+    .closeButton{
+        display: none;
+        z-index: 100;
+        border-radius: 50%;
+        position: relative;
+        float: right;
+        right: px;
+        top: 15%;
+        cursor: pointer;
+    }
+    .containerEps4{
+        height: 730px;
+    }
+    .containerEps5{
+        height: 730px;
+    }
+    .containerEps6{
+        height: 730px;
+    }
+    .containerEps7{
+        height: 730px;
+    }
+    .containerEps8{
+        height: 730px;
+    }
+    .containerEps9{
+        height: 730px;
+    }
+    .containerEps10{
+        height: 730px;
+    }
+    .containerEps11{
+        height: 730px;
+    }
+    .containerEps12{
+        height: 730px;
+    }
+}
+
+@media only screen and (max-width: 540px) {
+    
+    body{
+        background-size: cover;
+    }
+    
+    .movie{
+        display: none;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        left: 0px;
+        top: 21%;        
+    }
+    .closeButton{
+        display: none;
+        z-index: 100;
+        border-radius: 50%;
+        position: relative;
+        float: right;
+        right: 1px;
+        top: 20%;
+        cursor: pointer;
+    }
+    .containerEps4{
+        height: 730px;
+    }
+    .containerEps5{
+        height: 730px;
+    }
+    .containerEps6{
+        height: 730px;
+    }
+    .containerEps7{
+        height: 730px;
+    }
+    .containerEps8{
+        height: 730px;
+    }
+    .containerEps9{
+        height: 730px;
+    }
+    .containerEps10{
+        height: 730px;
+    }
+    .containerEps11{
+        height: 730px;
+    }
+    .containerEps12{
+        height: 730px;
+    }
+}
+
+@media only screen and (max-width: 414px) {
+    
+    body{
+        background-size: cover;
+    }
+    
+    .movie{
+        display: none;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        left: 0%;
+        top: 17%;        
+    }
+    .closeButton{
+        display: none;
+        z-index: 100;
+        border-radius: 50%;
+        position: relative;
+        float: right;
+        right: px;
+        top: 15%;
+        cursor: pointer;
+    }
+    .containerEps4{
+        height: 730px;
+    }
+    .containerEps5{
+        height: 730px;
+    }
+    .containerEps6{
+        height: 730px;
+    }
+    .containerEps7{
+        height: 730px;
+    }
+    .containerEps8{
+        height: 730px;
+    }
+    .containerEps9{
+        height: 730px;
+    }
+    .containerEps10{
+        height: 730px;
+    }
+    .containerEps11{
+        height: 730px;
+    }
+    .containerEps12{
+        height: 730px;
+    }
+}
+
+@media only screen and (max-width: 412px) {
+    
+    body{
+        background-size: cover;
+    }
+    
+    .movie{
+        display: none;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        left: 0px;
+        top: 16%;        
+    }
+    .closeButton{
+        display: none;
+        z-index: 100;
+        border-radius: 50%;
+        position: relative;
+        float: right;
+        right: 1px;
+        top: 20%;
+        cursor: pointer;
+    }
+    .containerEps4{
+        height: 730px;
+    }
+    .containerEps5{
+        height: 730px;
+    }
+    .containerEps6{
+        height: 730px;
+    }
+    .containerEps7{
+        height: 730px;
+    }
+    .containerEps8{
+        height: 730px;
+    }
+    .containerEps9{
+        height: 730px;
+    }
+    .containerEps10{
+        height: 730px;
+    }
+    .containerEps11{
+        height: 730px;
+    }
+    .containerEps12{
+        height: 730px;
+    }
+}
+
+@media only screen and (max-width: 393px) {
+    
+    body{
+        background-size: cover;
+    }
+    
+    .movie{
+        display: none;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        left: 0%;
+        top: 18%;        
+    }
+    .closeButton{
+        display: none;
+        z-index: 100;
+        border-radius: 50%;
+        position: relative;
+        float: right;
+        right: px;
+        top: 15%;
+        cursor: pointer;
+    }
+    .containerEps4{
+        height: 730px;
+    }
+    .containerEps5{
+        height: 730px;
+    }
+    .containerEps6{
+        height: 730px;
+    }
+    .containerEps7{
+        height: 730px;
+    }
+    .containerEps8{
+        height: 730px;
+    }
+    .containerEps9{
+        height: 730px;
+    }
+    .containerEps10{
+        height: 730px;
+    }
+    .containerEps11{
+        height: 730px;
+    }
+    .containerEps12{
+        height: 730px;
+    }
 }
 
 @media only screen and (max-width: 380px) {
@@ -342,6 +960,186 @@ p:hover {
         height: 730px;
     }
     .containerEps5{
+        height: 730px;
+    }
+    .containerEps6{
+        height: 730px;
+    }
+    .containerEps7{
+        height: 730px;
+    }
+    .containerEps8{
+        height: 730px;
+    }
+    .containerEps9{
+        height: 730px;
+    }
+    .containerEps10{
+        height: 730px;
+    }
+    .containerEps11{
+        height: 730px;
+    }
+    .containerEps12{
+        height: 730px;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    
+    body{
+        background-size: cover;
+    }
+    
+    .movie{
+        display: none;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        left: 0%;
+        top: 22%;        
+    }
+    .closeButton{
+        display: none;
+        z-index: 100;
+        border-radius: 50%;
+        position: relative;
+        float: right;
+        right: px;
+        top: 15%;
+        cursor: pointer;
+    }
+    .containerEps4{
+        height: 730px;
+    }
+    .containerEps5{
+        height: 730px;
+    }
+    .containerEps6{
+        height: 730px;
+    }
+    .containerEps7{
+        height: 730px;
+    }
+    .containerEps8{
+        height: 730px;
+    }
+    .containerEps9{
+        height: 730px;
+    }
+    .containerEps10{
+        height: 730px;
+    }
+    .containerEps11{
+        height: 730px;
+    }
+    .containerEps12{
+        height: 730px;
+    }
+}
+
+@media only screen and (max-width: 360px) {
+    
+    body{
+        background-size: cover;
+    }
+    
+    .movie{
+        display: none;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        left: 0%;
+        top: 20%;        
+    }
+    .closeButton{
+        display: none;
+        z-index: 100;
+        border-radius: 50%;
+        position: relative;
+        float: right;
+        right: px;
+        top: 15%;
+        cursor: pointer;
+    }
+    .containerEps4{
+        height: 730px;
+    }
+    .containerEps5{
+        height: 730px;
+    }
+    .containerEps6{
+        height: 730px;
+    }
+    .containerEps7{
+        height: 730px;
+    }
+    .containerEps8{
+        height: 730px;
+    }
+    .containerEps9{
+        height: 730px;
+    }
+    .containerEps10{
+        height: 730px;
+    }
+    .containerEps11{
+        height: 730px;
+    }
+    .containerEps12{
+        height: 730px;
+    }
+}
+
+@media only screen and (max-width: 280px) {
+    
+    body{
+        background-size: cover;
+    }
+    
+    .movie{
+        display: none;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        left: 0px;
+        top: 22%;        
+    }
+    .closeButton{
+        display: none;
+        z-index: 100;
+        border-radius: 50%;
+        position: relative;
+        float: right;
+        right: 1px;
+        top: 20%;
+        cursor: pointer;
+    }
+    .containerEps4{
+        height: 730px;
+    }
+    .containerEps5{
+        height: 730px;
+    }
+    .containerEps6{
+        height: 730px;
+    }
+    .containerEps7{
+        height: 730px;
+    }
+    .containerEps8{
+        height: 730px;
+    }
+    .containerEps9{
+        height: 730px;
+    }
+    .containerEps10{
+        height: 730px;
+    }
+    .containerEps11{
+        height: 730px;
+    }
+    .containerEps12{
         height: 730px;
     }
 }
