--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&family=Roboto:wght@400;900&family=Ubuntu:ital,wght@0,300;0,400;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500;900&family=Sora:wght@100;300;600&display=swap');
+
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Saira', sans-serif;
+    font-family: 'Sora', sans-serif;
 }
 
 a {
@@ -15,11 +17,39 @@ header {
     max-width: 100vw;
 }
 
+.cabecalho{
+    display: flex;
+}
+
+@keyframes loading {
+	0% {
+		transform: rotate(0);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+.atomlogo{
+    animation: loading 5s linear infinite;
+    margin-right: px;
+}
+
+
+.titulo{
+    font-size: 40px;
+    font-family: 'Maven Pro', sans-serif;
+    font-weight: 500;
+}
+
 body {
     background-image: url(img/281920\ \(1\).jpg);
     background-size: cover;
     background-repeat: repeat;
     background-position: center center;
+    backdrop-filter: url(filters.svg#filter) blur(15px) saturate(100%) grayscale(40%);
+    /* backdrop-filter: blur(18px) grayscale(10%); */
+    /* backdrop-filter: grayscale(10%); */
     width: 100vw;
     height: 100vh;
     display: absolute;
@@ -44,25 +74,26 @@ select, .containerEps {
 
 button {
     padding: 5px;
-    margin-top: 5px;
+    margin-top: 20px;
     width: 215px;
     border-radius: 5px;
-    border: 5px green solid;
+    border: rgb(223, 223, 35);
     transition: .1s;
     font-weight: bold;
     font-size: 15px;
-    background-color: green;
+    background: rgb(223, 223, 35);
     box-shadow: 0 5px 15px rgb(0, 0, 0);
-    color: white;
+    color: rgb(0, 0, 0);
+    cursor: pointer;
 }
 
 button:hover {
     
-    box-shadow: 0 5px 15px rgba(255, 255, 255, 0.9);
+    box-shadow: 0 5px 15px rgba(13, 14, 13, 0.9);
 }
 
 .clickP{
-    color: red;
+    color: rgb(251, 255, 0);
 }
 
 .containerEps {
@@ -73,8 +104,8 @@ button:hover {
     justify-content: center;
     height: 82.5vh;
     margin-bottom: 20px;
-    background-color: #f1eee9ea;
-    box-shadow: 0 15px 25px rgba(0,0,0,.9);
+    background: linear-gradient(90deg, rgba(255, 72, 0, 1.49) 0%, rgba(255, 170, 0, 1.83) 100%);
+    box-shadow: 0 15px 25px rgba(201, 192, 192, 0.521);
     border-radius: 5px;
     animation: bounce .5s ;
     -webkit-animation: bounce .5s;
@@ -87,10 +118,10 @@ button:hover {
     align-items: center;
     justify-content: center;
     margin-top: 15px;
-    height: 82.5vh;
+    height: 85.5vh;
     margin-bottom: 20px;
-    background-color: #f1eee9ea;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    background: linear-gradient(90deg, rgba(255, 72, 0, 1.49) 0%, rgba(255, 170, 0, 1.83) 100%);
+    box-shadow: 0 15px 25px rgba(201, 192, 192, 0.521);
     border-radius: 5px;
     animation: bounce .5s ;
     -webkit-animation: bounce .5s;
@@ -105,8 +136,8 @@ button:hover {
     margin-top: 15px;
     height: 82.5vh;
     margin-bottom: 20px;
-    background-color: #f1eee9ea;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    background: linear-gradient(90deg, rgba(255, 72, 0, 1.49) 0%, rgba(255, 170, 0, 1.83) 100%);
+    box-shadow: 0 15px 25px rgba(201, 192, 192, 0.521);
     border-radius: 5px;
     animation: bounce .5s ;
     -webkit-animation: bounce .5s;
@@ -121,8 +152,8 @@ button:hover {
     margin-top: 15px;
     height: 85.5vh;
     margin-bottom: 20px;
-    background-color: #f1eee9ea;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    background: linear-gradient(90deg, rgba(255, 72, 0, 1.49) 0%, rgba(255, 170, 0, 1.83) 100%);
+    box-shadow: 0 15px 25px rgba(201, 192, 192, 0.521);
     border-radius: 5px;
     animation: bounce .5s ;
     -webkit-animation: bounce .5s;
@@ -137,8 +168,8 @@ button:hover {
     margin-top: 15px;
     height: 85.5vh;
     margin-bottom: 20px;
-    background-color: #f1eee9ea;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    background: linear-gradient(90deg, rgba(255, 72, 0, 1.49) 0%, rgba(255, 170, 0, 1.83) 100%);
+    box-shadow: 0 15px 25px rgba(201, 192, 192, 0.521);
     border-radius: 5px;
     animation: bounce .5s ;
     -webkit-animation: bounce .5s;
@@ -153,8 +184,8 @@ button:hover {
     margin-top: 15px;
     height: 85.5vh;
     margin-bottom: 20px;
-    background-color: #f1eee9ea;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    background: linear-gradient(90deg, rgba(255, 72, 0, 1.49) 0%, rgba(255, 170, 0, 1.83) 100%);
+    box-shadow: 0 15px 25px rgba(201, 192, 192, 0.521);
     border-radius: 5px;
     animation: bounce .5s ;
     -webkit-animation: bounce .5s;
@@ -169,8 +200,8 @@ button:hover {
     margin-top: 15px;
     height: 85.5vh;
     margin-bottom: 20px;
-    background-color: #f1eee9ea;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    background: linear-gradient(90deg, rgba(255, 72, 0, 1.49) 0%, rgba(255, 170, 0, 1.83) 100%);
+    box-shadow: 0 15px 25px rgba(201, 192, 192, 0.521);
     border-radius: 5px;
     animation: bounce .5s ;
     -webkit-animation: bounce .5s;
@@ -185,8 +216,8 @@ button:hover {
     margin-top: 15px;
     height: 85.5vh;
     margin-bottom: 20px;
-    background-color: #f1eee9ea;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    background: linear-gradient(90deg, rgba(255, 72, 0, 1.49) 0%, rgba(255, 170, 0, 1.83) 100%);
+    box-shadow: 0 15px 25px rgba(201, 192, 192, 0.521);
     border-radius: 5px;
     animation: bounce .5s ;
     -webkit-animation: bounce .5s;
@@ -201,8 +232,8 @@ button:hover {
     margin-top: 15px;
     height: 85.5vh;
     margin-bottom: 20px;
-    background-color: #f1eee9ea;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    background: linear-gradient(90deg, rgba(255, 72, 0, 1.49) 0%, rgba(255, 170, 0, 1.83) 100%);
+    box-shadow: 0 15px 25px rgba(201, 192, 192, 0.521);
     border-radius: 5px;
     animation: bounce .5s ;
     -webkit-animation: bounce .5s;
@@ -217,8 +248,8 @@ button:hover {
     margin-top: 15px;
     height: 85.5vh;
     margin-bottom: 20px;
-    background-color: #f1eee9ea;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    background: linear-gradient(90deg, rgba(255, 72, 0, 1.49) 0%, rgba(255, 170, 0, 1.83) 100%);
+    box-shadow: 0 15px 25px rgba(201, 192, 192, 0.521);
     border-radius: 5px;
     animation: bounce .5s ;
     -webkit-animation: bounce .5s;
@@ -233,8 +264,8 @@ button:hover {
     margin-top: 15px;
     height: 85.5vh;
     margin-bottom: 20px;
-    background-color: #f1eee9ea;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    background: linear-gradient(90deg, rgba(255, 72, 0, 1.49) 0%, rgba(255, 170, 0, 1.83) 100%);
+    box-shadow: 0 15px 25px rgba(201, 192, 192, 0.521);
     border-radius: 5px;
     animation: bounce .5s ;
     -webkit-animation: bounce .5s;
@@ -249,8 +280,8 @@ button:hover {
     margin-top: 15px;
     height: 85.5vh;
     margin-bottom: 20px;
-    background-color: #f1eee9ea;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    background: linear-gradient(90deg, rgba(255, 72, 0, 1.49) 0%, rgba(255, 170, 0, 1.83) 100%);
+    box-shadow: 0 15px 25px rgba(201, 192, 192, 0.521);
     border-radius: 5px;
     animation: bounce .5s ;
     -webkit-animation: bounce .5s;
@@ -273,10 +304,10 @@ button:hover {
 }
 
 p {
-    padding-top: 10px;
-    color: black;
+    padding-top: 8px;
+    color: rgb(255, 255, 255);
     text-decoration: none;
-    font-weight: bold;
+    font-weight: 600;
     transition: .1s;
     cursor: pointer;
 }
@@ -311,7 +342,9 @@ p:hover {
 @media only screen and (max-width: 1920px) {
     
     h1{
-        color: white;
+        color: #FAF8F5;
+        font-weight: 600;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.719);
     }
     body{
         justify-content: center;
@@ -334,7 +367,7 @@ p:hover {
     }
 
     .containerEps2{
-        height: 630px;
+        height: 660px;
         align-items: center;
         justify-content: center;
     }
@@ -379,7 +412,8 @@ p:hover {
     }
 
     select{
-        
+        font-family: 'Sora', sans-serif;
+        font-size: 15px;
         justify-content: center;
         align-items: center;
     }
